<resources>
    <string name="app_name">Book Rental</string>
    <string name="app_text">Welcome!</string>
    <string name="app_description">Please use the menu to manage the catalog, rental and students</string>
    <string name="database_search">Search</string>
    <string name="database_register">Register</string>
    <string name="database_update">Update</string>
    <string name="database_remove">Remove</string>
    <string name="database_list">List</string>
    <string name="exemplar_id_label">Id:</string>
    <string name="exemplar_id">001</string>
    <string name="exemplar_name_label">Name:</string>
    <string name="exemplar_name">Alice in Wonderland</string>
    <string name="exemplar_pages_label">Pages:</string>
    <string name="exemplar_pages">070</string>
    <string name="book_label">Book</string>
    <string name="book_isbn_label">ISBN:</string>
    <string name="book_isbn">A1</string>
    <string name="book_edition_label">Edition:</string>
    <string name="book_edition">5</string>
    <string name="magazine_label">Magazine</string>
    <string name="magazine_issn_label">ISSN:</string>
    <string name="magazine_issn">B1</string>
    <string name="rental_label">Rental</string>
    <string name="rental_student_label">Student:</string>
    <string name="rental_exemplar_label">Exemplar:</string>
    <string name="rental_dateWithdraw_label">Withdraw:</string>
    <string name="rental_dateWithdraw">2024–01–01</string>
    <string name="rental_dateReturn_label">Return:</string>
    <string name="rental_dateReturn">2024–01–02</string>
    <string name="student_label">Student</string>
    <string name="student_id_label">Id:</string>
    <string name="student_id">001</string>
    <string name="student_name_label">Name:</string>
    <string name="student_name">John Doe</string>
    <string name="student_email_label">Email:</string>
    <string name="student_email">johndoe@mail.com</string>
</resources>