<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutBook"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.BookFragment">

    <TextView
        android:id="@+id/textViewBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/book_label"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewBookIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/exemplar_id_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextBookId"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookTitle" />

    <EditText
        android:id="@+id/editTextBookId"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/exemplar_id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/buttonBookSearch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewBookIdLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewBookIdLabel" />

    <Button
        android:id="@+id/buttonBookSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/database_search"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewBookIdLabel" />

    <TextView
        android:id="@+id/textViewBookNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/exemplar_name_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextBookName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookIdLabel" />

    <EditText
        android:id="@+id/editTextBookName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/exemplar_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewBookNameLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewBookNameLabel" />

    <TextView
        android:id="@+id/textViewBookPagesLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/exemplar_pages_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextBookPages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookNameLabel" />

    <EditText
        android:id="@+id/editTextBookPages"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/exemplar_pages"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/textViewBookEditionLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewBookPagesLabel" />

    <EditText
        android:id="@+id/editTextBookEdition"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/book_edition"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewBookEditionLabel" />

    <TextView
        android:id="@+id/textViewBookEditionLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:text="@string/book_edition_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextBookEdition"
        app:layout_constraintTop_toTopOf="@+id/textViewBookPagesLabel" />

    <TextView
        android:id="@+id/textViewBookISBNLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/book_isbn_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextBookISBN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookPagesLabel" />

    <EditText
        android:id="@+id/editTextBookISBN"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/book_isbn"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewBookISBNLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewBookISBNLabel" />

    <Button
        android:id="@+id/buttonBookRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/database_register"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonBookUpdate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookISBNLabel" />

    <Button
        android:id="@+id/buttonBookUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database_update"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonBookRemove"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonBookRegister"
        app:layout_constraintTop_toTopOf="@+id/buttonBookRegister" />

    <Button
        android:id="@+id/buttonBookRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database_remove"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonBookUpdate"
        app:layout_constraintTop_toTopOf="@+id/buttonBookRegister" />

    <Button
        android:id="@+id/buttonBookList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/database_list"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBookRegister" />

    <TextView
        android:id="@+id/textViewBookOutput"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:gravity="center_vertical"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>