<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutExemplar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MagazineFragment">

    <TextView
        android:id="@+id/textViewMagazineTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/magazine_label"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMagazineIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/exemplar_id_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextMagazineId"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMagazineTitle" />

    <EditText
        android:id="@+id/editTextMagazineId"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/exemplar_id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/buttonMagazineSearch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewMagazineIdLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewMagazineIdLabel" />

    <Button
        android:id="@+id/buttonMagazineSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/database_search"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewMagazineIdLabel" />

    <TextView
        android:id="@+id/textViewMagazineNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/exemplar_name_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextMagazineName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMagazineIdLabel" />

    <EditText
        android:id="@+id/editTextMagazineName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/exemplar_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewMagazineNameLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewMagazineNameLabel" />

    <TextView
        android:id="@+id/textViewMagazinePagesLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/exemplar_pages_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextMagazinePages"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMagazineNameLabel" />

    <EditText
        android:id="@+id/editTextMagazinePages"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/exemplar_pages"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewMagazinePagesLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewMagazinePagesLabel" />

    <TextView
        android:id="@+id/textViewMagazineISSNLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/magazine_issn_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextMagazineISSN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMagazinePagesLabel" />

    <EditText
        android:id="@+id/editTextMagazineISSN"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/magazine_issn"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewMagazineISSNLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewMagazineISSNLabel" />

    <Button
        android:id="@+id/buttonMagazineRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/database_register"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonMagazineUpdate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMagazineISSNLabel" />

    <Button
        android:id="@+id/buttonMagazineUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database_update"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonMagazineRemove"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonMagazineRegister"
        app:layout_constraintTop_toTopOf="@+id/buttonMagazineRegister" />

    <Button
        android:id="@+id/buttonMagazineRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database_remove"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonMagazineUpdate"
        app:layout_constraintTop_toTopOf="@+id/buttonMagazineRegister" />

    <Button
        android:id="@+id/buttonMagazineList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/database_list"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMagazineRegister" />

    <TextView
        android:id="@+id/textViewMagazineOutput"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:gravity="center_vertical"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>