<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutStudent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.StudentFragment">

    <TextView
        android:id="@+id/textViewStudentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/student_label"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewStudentIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:text="@string/student_id_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextStudentId"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStudentTitle" />

    <EditText
        android:id="@+id/editTextStudentId"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/student_id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/buttonStudentSearch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewStudentIdLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewStudentIdLabel" />

    <Button
        android:id="@+id/buttonStudentSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/database_search"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewStudentIdLabel" />

    <TextView
        android:id="@+id/textViewStudentNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/student_name_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextStudentName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStudentIdLabel" />

    <EditText
        android:id="@+id/editTextStudentName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/student_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewStudentNameLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewStudentNameLabel" />

    <TextView
        android:id="@+id/textViewStudentEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/student_email_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextStudentEmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStudentNameLabel" />

    <EditText
        android:id="@+id/editTextStudentEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/student_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewStudentEmailLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewStudentEmailLabel" />

    <Button
        android:id="@+id/buttonStudentRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/database_register"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonStudentUpdate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStudentEmailLabel" />

    <Button
        android:id="@+id/buttonStudentUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database_update"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonStudentRemove"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonStudentRegister"
        app:layout_constraintTop_toTopOf="@+id/buttonStudentRegister" />

    <Button
        android:id="@+id/buttonStudentRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database_remove"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonStudentUpdate"
        app:layout_constraintTop_toTopOf="@+id/buttonStudentRegister" />

    <Button
        android:id="@+id/buttonStudentList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/database_list"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStudentRegister" />

    <TextView
        android:id="@+id/textViewStudentOutput"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:gravity="center_vertical"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>